--- a/index.html
+++ b/index.html
@@ -307,10 +307,85 @@
         </section>
     </main>
 
+    <!--Постоянные клиенты-->
+
+    <section class="clients">
+        <div class="container">
+            <h2 class="clients-title">Наши клиенты</h2>
+            <ul class="clients-list">
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                    <a class="clients-link" href="">
+                        <svg class="icon-clients" width="106" height="60">
+                            <use href="./images/sprite.svg#icon-company-1"></use>
+                        </svg>
+                    </a>
+                    </div>
+                </li>
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                        <a class="clients-link" href="">
+                            <svg class="icon-clients" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company-2"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                        <a class="clients-link" href="">
+                            <svg class="icon-clients" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company-3"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                        <a class="clients-link" href="">
+                            <svg class="icon-clients" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company-4"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                        <a class="clients-link" href="">
+                            <svg class="icon-clients" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company-5"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+                <li class="clients-item">
+                    <div class="clients-box">
+                        <a class="clients-link" href="">
+                            <svg class="icon-clients" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company-6"></use>
+                            </svg>
+                        </a>
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+
+
+    </section>
+
     <!--подвал-->
 
     <footer class="footer">
         <div class="container">
+            <div class="footer-box">
+                <div class="footer-left">
             <a class="logo-footer link" href="/"> <span class="logo-accent">Web</span> Studio</a>
             <address class="footer-addres">
                 <ul class="footer-list">
@@ -324,6 +399,49 @@
                     </li>
                 </ul>
             </address>
+            </div>
+
+            <div class="footer-right">
+                <h2 hidden>Соцсети</h2>
+                <h3 class="footer-right-title">присоединяйтесь</h3>
+                <ul class="footer-network">
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+            </div>
         </div>
     </footer>
 </body>
