--- a/portfolio.html
+++ b/portfolio.html
@@ -30,10 +30,22 @@
                 </li>
             </ul>
         </nav>
+
         <ul class="header-contacts">
-            <li class="header-contacts-item"><a class="contacts-item link"
-                    href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-contacts-item"><a class="contacts-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="header-contacts-item">
+        
+                <a class="contacts-item link" href="mailto:info@devstudio.com">
+                    <svg class="icon-nav" width="16" height="12">
+                        <use href="./images/sprite.svg#icon-envelope-hover"></use>
+                    </svg>
+                    info@devstudio.com</a>
+            </li>
+            <li class="header-contacts-item">
+                <a class="contacts-item link" href="tel:+380961111111">
+                    <svg class="icon-nav" width="10" height="16">
+                        <use href="./images/sprite.svg#icon-smartphone"></use>
+                    </svg>
+                    +38 096 111 11 11</a>
             </li>
         </ul>
     </div>
@@ -137,17 +149,66 @@
 
 <footer class="footer">
     <div class="container">
-        <a class="logo-footer link" href="/"> <span class="logo-accent">Web</span> Studio</a>
-        <address class="footer-addres">
-            <ul class="footer-list">
-                <li class="footer-item"><a class="address-item-map link" href="https://goo.gl/maps/FX2oiXXjCfkCqvJg9"
-                        target="_blank" rel="noopener noreferrer">г. Киев,
-                        пр-т Леси Украинки, 26</a></li>
-                <li class="footer-item"><a class="address-item link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="footer-item"><a class="address-item link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="footer-box">
+            <div class="footer-left">
+                <a class="logo-footer link" href="/"> <span class="logo-accent">Web</span> Studio</a>
+                <address class="footer-addres">
+                    <ul class="footer-list">
+                        <li class="footer-item"><a class="address-item-map link"
+                                href="https://goo.gl/maps/FX2oiXXjCfkCqvJg9" target="_blank"
+                                rel="noopener noreferrer">г.
+                                Киев,
+                                пр-т Леси Украинки, 26</a></li>
+                        <li class="footer-item"><a class="address-item link"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="footer-item"><a class="address-item link" href="tel:+380961111111">+38 096 111 11
+                                11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+
+            <div class="footer-right">
+                <h2 hidden>Соцсети</h2>
+                <h3 class="footer-right-title">присоединяйтесь</h3>
+                <ul class="footer-network">
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="network-item">
+                        <a class="network-link" href="">
+                            <svg class="icon-network" width="20" height="20">
+                                <use href="./images/sprite.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+        </div>
     </div>
 </footer>
     </body>
